# gliders

./: Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  example.wgsl
proc_macro/: Cargo.toml
src/: device.rs  grammar.pest  lib.rs  shader.rs
src/memory/: mod.rs
src/parsing/: mod.rs
tests/: basic.rs
