[package]
name = "gliders"
authors = ["Glenn Wallace glennw-coding@proton.me"]
description = "A simple but expressive programming language which transpiles to Rust."
version = "0.0.2"
edition = "2024"
keywords = ["programming language", "convenience"]
categories = ["development-tools", "parser-implementations"]
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/Stack-Syndicate/gliders"

[lib]
proc-macro = true
path = "src/lib.rs"

[[bin]]
name = "gliders"
path = "src/main.rs"

[dependencies]
pest = "2.8.1"
pest_derive = "2.8.1"
proc-macro2 = "1.0.97"
quote = "1.0.40"
syn = { version = "2.0.105", features = ["full"] }
