[package]
name = "gliders"
authors = ["Glenn Wallace glennw-coding@proton.me"]
description = "A compute shader library with minimal boilerplate."
version = "0.1.0"
edition = "2024"
keywords = ["convenience"]
categories = ["development-tools"]
license-file = "LICENSE"
repository = "https://github.com/Stack-Syndicate/gliders"

[lib]
path = "src/lib.rs"

[dependencies]
bytemuck = "1.24.0"
pollster = "0.4.0"
wgpu = "27.0.1"
