[package]
name = "gliders"
authors = ["Glenn Wallace glennw-coding@proton.me"]
description = "A library for rough prototyping and convenience."
version = "0.2.0"
edition = "2024"
keywords = ["convenience"]
categories = ["development-tools"]
license-file = "LICENSE"
repository = "https://github.com/Stack-Syndicate/gliders"

[lib]
path = "src/lib.rs"

[dependencies]
bumpalo = { version = "3.19.0", features = ["collections"] }
env_logger = "0.11.8"
log = "0.4.28"
once_cell = { version = "1.21.3", features = ["parking_lot"] }
parking_lot = "0.12.5"
